# mario.replays

./: .gitignore  README.md  generate_sidecars.py  invoke.yaml  pyproject.toml  requirements.txt  tasks.py
code/mario_replays/: replay_bk2.py
code/mario_replays/create_replays/: create_replays.py
code/mario_replays/load_data/: load_data.py
code/mario_replays/utils/: utils.py
docs/: data_summary.ipynb
src/mario_replays/: __init__.py  replay_bk2.py
src/mario_replays/create_companions/: create_companions.py
src/mario_replays/create_replays/: create_replays.py
src/mario_replays/generate_files/: generate_files.py
src/mario_replays/generate_sidecars/: generate_sidecars.py
src/mario_replays/load_data/: load_data.py
src/mario_replays/utils/: utils.py
